# MCpub

./: .replit  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-title-Privacy-Policy-MonetizeC-1727380779277.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-title-Terms-of-Service-Monetiz-1727380982438.txt  Pasted--Prompt-for-Replit-Agent-Title-Build-a-Web-Service-for-Custom-URL-Rewriting-API--1727314808365.txt  Pasted--head-body-h1-API-Privacy-Policy-h1-p-Effective-Date-28-Sept-2024-p-p-Your-pri-1727685493852.txt  check_load_test_results.py  gunicorn_config.py  load_test.py  load_test_output.txt  main.py  pyproject.toml  replit.nix  test_api.py
static/: robots.txt  script.js  sitemap.xml  style.css
templates/: api_privacy_policy.html  index.html  privacy_policy.html  terms_of_service.html
